# ecg_model

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  vcpkg.json
.github/workflows/: check.yml
resources/: argmax_output.txt  input.txt
src/: forward.cpp  forward.h  forward.hpp  main.cpp  main.h  utils.cpp  utils.h
src/scipy/: filtfilt.h  resample.h  scipy.h  upfirdn.h
src/steps/: get_beats.cpp  get_beats.h  label_beats.cpp  label_beats.h  steps.h
tests/: test_forward.cpp  test_main.cpp  test_utils.cpp
